deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  selector:
    matchLabels:
      app: product-service
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: octopub-products
          image: octopussamples/octopub-products-microservice-mysql:0.1.167
          ports:
            - name: http
              containerPort: 8083
