ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - host-goes-here
    secretName: secret-name-goes-here
  rules:
  - host: host-goes-here
    http:
      paths:
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              name: http
      - path: /health/products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              name: http
